# ChangeLog for dev-libs/apr
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/apr/ChangeLog,v 1.153 2009/11/17 15:26:22 ranger Exp $

  17 Nov 2009; Brent Baude <ranger@gentoo.org> apr-1.3.9.ebuild:
  Marking apr-1.3.9 ppc64 for bug 290319

  14 Nov 2009; Raúl Porcel <armin76@gentoo.org> apr-1.3.9.ebuild:
  arm/ia64/s390/sh/sparc stable wrt #290319

  08 Nov 2009; Tobias Klausmann <klausman@gentoo.org> apr-1.3.9.ebuild:
  Stable on alpha, bug #290319

  04 Nov 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  apr-1.3.9.ebuild:
  Use 'dohtml -r' for compatibility with Doxygen 1.6 (bug #287821).

  01 Nov 2009; nixnut <nixnut@gentoo.org> apr-1.3.9.ebuild:
  ppc stable #290319

  30 Oct 2009; Markus Meier <maekke@gentoo.org> apr-1.3.9.ebuild:
  amd64/x86 stable, bug #290319

  26 Oct 2009; Jeroen Roovers <jer@gentoo.org> apr-1.3.9.ebuild:
  Stable for HPPA (bug #290319).

*apr-1.3.9 (24 Sep 2009)

  24 Sep 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +apr-1.3.9.ebuild:
  Version bump.

  20 Sep 2009; Benedikt Böhm <hollow@gentoo.org> -apr-1.3.5.ebuild,
  -apr-1.3.6.ebuild, -apr-1.3.7.ebuild, apr-1.3.8.ebuild:
  fix #274246; remove old ebuild

  24 Aug 2009; Brent Baude <ranger@gentoo.org> apr-1.3.8.ebuild:
  Marking apr-1.3.8 ppc64 for bug 280514

  23 Aug 2009; nixnut <nixnut@gentoo.org> apr-1.3.8.ebuild:
  ppc stable #280514

  14 Aug 2009; Raúl Porcel <armin76@gentoo.org> apr-1.3.8.ebuild:
  arm/ia64/s390/sh/sparc stable wrt #280514

  11 Aug 2009; Jeroen Roovers <jer@gentoo.org> apr-1.3.8.ebuild:
  Stable for HPPA (bug #280514).

  10 Aug 2009; Markus Meier <maekke@gentoo.org> apr-1.3.8.ebuild:
  x86 stable, bug #280514

  10 Aug 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  apr-1.3.8.ebuild, metadata.xml:
  Rename "cloexec" USE flag to "older-kernels-compatibility" (bug #280648).
