@@ -5,7 +5,7 @@ AUX apr-1.3.5-irix.patch 1610 RMD160 d7d083973727aec3c9f6ed06088246d2809f438b SH
 AUX config.layout.patch 818 RMD160 dada232c8b85e6c3c62fbc6caa1d05f36164dc27 SHA1 3822a0ec508165dd189e1b750bdf4e7778b6c21e SHA256 eeacaf654f23084e842bff02b97c083a8da5b5c056fd086166ba2d250edf3181
 DIST apr-1.3.8.tar.gz 1164963 RMD160 f45e1eaac6984e1207305f97c969d7adf806914b SHA1 6ed6a18230c48b4324eb0f6cbb02159a0762fc21 SHA256 587ec1eddd41201a0d30e63ada1b2d0f358be57138b6ce02ebdef1a12ffa29f2
 DIST apr-1.3.9.tar.bz2 927657 RMD160 e90943275289113771b623c827ab3fb3c18064d8 SHA1 fb19ec11a15db03dcb9211f31012b079a522d1f0 SHA256 5705a393f48ce8652e2b9143668ed208d34e7ce702b28dd497353561a6ed2ce2
-EBUILD apr-1.3.8.ebuild 3165 RMD160 5d335069a4b41d8064bb1d3477c8613377c9cf9a SHA1 533bbd2ed18ed2d897b5e562cd2daab8b131e38e SHA256 de69f4a9c97ef95b0945274f98051d7b85704228ee0fb0f383635a896ae2ad73
-EBUILD apr-1.3.9.ebuild 3168 RMD160 18baa53821d75f8d9438780f5e9aed78aa8384e8 SHA1 1f8d56229fcfeb3d1e6c3af6df86ce37df722ef9 SHA256 284d98de52c13e483abfdf48bff2ce1372e99240438fb257ba32bd6adf5c1402
-MISC ChangeLog 18433 RMD160 2d49aa036140f7c9d2650ef8564bdaceb66a96de SHA1 43b65114bbfc208afeb69591a973e02edf91dcfc SHA256 3389667492ae24bcf9bb01338084a0c055586af3fd9aa9dea8e75882d63c1f4a
+EBUILD apr-1.3.8.ebuild 3072 RMD160 f4b27299790524ee08cf4abf147dabac05e61f92 SHA1 6d79ddfd5f9270e3ec821bef1bf8720ae1953ce7 SHA256 990dc7164a20b67c19f3d89937633fd62b22044b41cb36306f016e179bf73cb1
+EBUILD apr-1.3.9.ebuild 3075 RMD160 e4215701f3c30eed982087e89451f82ddec334cc SHA1 a89dad1c46eeb7f0f8968b88b64c84f62b87e33b SHA256 7de2e2f6841fa86c8187e05b67e4a4424ea28e7bdf8d7c52a27061b19f4ed7e1
+MISC ChangeLog 18558 RMD160 8a5f14f23a8da2e443dd4f361c084525d5339e49 SHA1 62489dfc0b65a2d32bab4bcd94648d83e63b6458 SHA256 f1a2a980de659e269a44a2d7f5aa343b034715865c776c601736a788d785a351
 MISC metadata.xml 406 RMD160 9af45dec0119ed9afc091ef98d47a4dd7fcec2ae SHA1 d16a3b4f5efbf383b034e83f298a6d86ac9fd878 SHA256 bef219a00636140b1d99834ae19afc00b89f4df68068d1937a53c2c8ce51f2b9
