@@ -1,6 +1,6 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/apr/apr-1.3.9.ebuild,v 1.8 2009/11/17 15:26:22 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/apr/apr-1.3.9.ebuild,v 1.9 2010/03/07 11:56:25 hollow Exp $
 
 EAPI="2"
 
@@ -13,7 +13,7 @@ SRC_URI="mirror://apache/apr/${P}.tar.bz2"
 LICENSE="Apache-2.0"
 SLOT="1"
 KEYWORDS="~ppc-aix ~x86-freebsd ~hppa-hpux ~ia64-hpux ~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~m68k-mint ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris"
-IUSE="debug doc older-kernels-compatibility +urandom"
+IUSE="doc older-kernels-compatibility +urandom"
 RESTRICT="test"
 
 DEPEND="doc? ( app-doc/doxygen )"
@@ -34,10 +34,6 @@ src_configure() {
 
 	[[ ${CHOST} == *-interix* ]] && export ac_cv_func_poll=no
 	[[ ${CHOST} == *-mint* ]] && export ac_cv_func_poll=no
-
-	if use debug; then
-		myconf+=" --enable-maintainer-mode --enable-pool-debug=all"
-	fi
 
 	if use older-kernels-compatibility; then
 		local apr_cv_accept4 apr_cv_dup3 apr_cv_epoll_create1 apr_cv_sock_cloexec
